# hovering_3d

Hovering_3dd/: libinterface_simulink.so.1  student_1.onnx  test2.ipynb  test2.py
Hovering_3dd/DDPG_keras/: BufferClass.py  actor_data.csv  another.py  ddpg_ex.py  ddpg_ex_keras.ipynb  ddpg_ex_keras_arch.ipynb  drone_x.csv  drone_y.csv  drone_z.csv  episode_trajectories.csv  episode_trajectories_viewer.xlsx  hi.csv  libinterface_simulink.so.1  model.tflite  model2.pb  model3.pb  modelonnxfinal.onnx  modelonnxfinall_fixed.onnx  modelonnxfinalll.onnx  modelonnxfinalll_norhan_limitied_commands.onnx  modelonxx2_z_up.onnx  modelonxxsmooth.onnx  pendulum_actor.h5  pendulum_critic.h5  pendulum_target_actor.h5  pendulum_target_critic.h5  tanh_smooth.onnx  test.py  testwebsite.ipynb  time_data.csv  uav_z_u_cmd_actor.h5  uav_z_u_cmd_critic.h5  uav_z_u_cmd_target_actor.h5  uav_z_u_cmd_target_critic.h5
Hovering_3dd/DDPG_keras/actor_model_student/: fingerprint.pb  keras_metadata.pb  saved_model.pb
Hovering_3dd/DDPG_keras/actor_model_teacher/: fingerprint.pb  keras_metadata.pb  saved_model.pb
Hovering_3dd/DDPG_keras/actorr_model_student/: fingerprint.pb  keras_metadata.pb  saved_model.pb
Hovering_3dd/DDPG_keras/actorr_model_student_tanh/: fingerprint.pb  keras_metadata.pb  saved_model.pb
Hovering_3dd/DDPG_keras/actorr_model_student_z_up/: fingerprint.pb  keras_metadata.pb  saved_model.pb
Hovering_3dd/DDPG_keras/actorr_model_teacher/: fingerprint.pb  keras_metadata.pb  saved_model.pb
Hovering_3dd/DDPG_keras/actorr_model_teacher_tanh/: fingerprint.pb  keras_metadata.pb  saved_model.pb
Hovering_3dd/DDPG_keras/actorr_model_teacher_z_up/: fingerprint.pb  keras_metadata.pb  saved_model.pb
Hovering_3dd/DDPG_keras/model (1)/: fingerprint.pb  keras_metadata.pb  (+1 more)
Hovering_3dd/Sim_intfc/: CMakeLists.txt  Makefile  builtin_typeid_types.h  call_wrapper_simulink.py  cmake_install.cmake  codeInfo.mat  codedescriptor.dmr  interface_simulink.cpp  interface_simulink.h  interface_simulink.pc  interface_simulink.pc.in  main_lib_call.cpp  multiword_types.h  rtGetInf.c  rtGetInf.cpp  rtGetInf.h  rtGetNaN.c  rtGetNaN.cpp  rtGetNaN.h  rt_defines.h  rt_nonfinite.c  rt_nonfinite.cpp  rt_nonfinite.h  rtmodel.h  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat  uavNavigationRL2D_2022a_icra.cpp  uavNavigationRL2D_2022a_icra.h  uavNavigationRL2D_2022a_icra.mk  uavNavigationRL2D_2022a_icra_data.cpp  uavNavigationRL2D_2022a_icra_manifest.txt  uavNavigationRL2D_2022a_icra_private.h  uavNavigationRL2D_2022a_icra_types.h  wrapper_api.h  wrapper_routine_RL2D.cpp
Hovering_3dd/actor_model_student/: fingerprint.pb  keras_metadata.pb  saved_model.pb
Hovering_3dd/actor_model_teacher/: fingerprint.pb  keras_metadata.pb  saved_model.pb
Hovering_3dd/onxx/: CMakeLists.txt  convertline.txt  student.onnx  teacher.onnx  test.cpp
(+33 files in other folders)
